@@ -1,75 +1,0 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<!DOCTYPE refentry PUBLIC "-//OASIS//DTD DocBook XML V4.5//EN"
-                   "http://www.oasis-open.org/docbook/xml/4.5/docbookx.dtd">
-<refentry>
-  <refmeta>
-    <refentrytitle>IPSEC-_STACKMANAGER</refentrytitle>
-    <manvolnum>8</manvolnum>
-    <refmiscinfo class='date'>06 May 2019</refmiscinfo>
-    <refmiscinfo class="source">Libreswan</refmiscinfo>
-    <refmiscinfo class="version">@@IPSECVERSION@@</refmiscinfo>
-    <refmiscinfo class="manual">Executable programs</refmiscinfo>
-  </refmeta>
-  <refnamediv id='name'>
-    <refname>ipsec-_stackmanager</refname>
-    <refpurpose>internal script to bring up kernel components for Libreswan</refpurpose>
-  </refnamediv>
-  <!-- body begins here -->
-
-  <refsynopsisdiv id="synopsis">
-    <cmdsynopsis>
-      <command>ipsec _stackmanager</command>
-      <group choice='req'>
-	<arg choice='plain'>start</arg>
-	<arg choice='plain'>stop</arg>
-      </group>
-    </cmdsynopsis>
-  </refsynopsisdiv>
-
-  <refsect1 id='description'>
-    <title>DESCRIPTION</title>
-    <para>
-      <command>ipsec _stackmanager</command> is called
-      from within the init sub-system (systemd, upstart, sysv initscripts)
-      to bring up the Libreswan kernel component as configured via the
-      <emphasis>protostack=</emphasis> option in the <emphasis>ipsec.conf</emphasis>
-      configuration file.
-    </para>
-
-    <para>
-      This involves loading and optionally unloading of the required
-      kernel modules. Because the Linux kernel cannot autodetect most crypto
-      related drivers on-demand, _stackmanager handles loading the modules
-      for the specific IPsec stack.
-    </para>
-  </refsect1>
-
-  <refsect1 id='see_also'>
-    <title>SEE ALSO</title>
-    <para>
-      <citerefentry><refentrytitle>ip</refentrytitle><manvolnum>8</manvolnum></citerefentry>,
-      <citerefentry><refentrytitle>ipsec.conf</refentrytitle><manvolnum>5</manvolnum></citerefentry>,
-      <citerefentry><refentrytitle>ipsec</refentrytitle><manvolnum>8</manvolnum></citerefentry>,
-      <citerefentry><refentrytitle>pluto</refentrytitle><manvolnum>8</manvolnum></citerefentry>
-    </para>
-  </refsect1>
-
-  <refsect1 id='history'>
-    <title>HISTORY</title>
-    <para>
-      This script was introduced in Libreswan. On the older Openswan systems,
-      this functionality was split over various script files such as ipsec _startnetkey,
-      ipsec _startklips, ipsec _realsetup and ipsec setup.
-      Man page written for the Libreswan project
-      &lt;<ulink url='https://libreswan.org/'>https://libreswan.org/</ulink>&gt;
-      by Paul Wouters.
-    </para>
-  </refsect1>
-
-  <refsect1 id='author'>
-    <title>AUTHOR</title>
-    <para>
-      <author><personname><firstname>Paul</firstname><surname>Wouters</surname></personname></author>
-    </para>
-  </refsect1>
-</refentry>
