@@ -9,6 +9,8 @@ v5.3 (unreleased)
   - fixed `ipsec checkcrls` [Andrew]
   - when configured, use cURL to download LDAP CRLs [Andrew]
   - verify using NSS's IPsec profile aka certificateUsageIPsec [Andrew]
+* initsystem:
+  - remove unused _stackmanager [Tuomo #2080]
 * Testing:
   - eliminated all pyOpenSSL dependencies [Andrew]
   - review PKIX test coverage [Andrew]
